# bfloat16

./: .gitignore  MANIFEST.in  README.md  bfloat16.cc  pyproject.toml  setup.py  test.py
tests/: test_bfloat16.py
